--- a/backend/package.json
+++ b/backend/package.json
@@ -11,16 +11,17 @@
     "format": "prettier --write \"src/**/*.ts\""
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
     "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.1",
-    "mongoose": "^8.6.0",
+    "@nestjs/platform-express": "^10.0.0",
+    "axios": "^1.7.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "axios": "^1.7.2",
     "ioredis": "^5.4.1",
+    "mongoose": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -29,9 +30,9 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/node": "^20.11.30",
-    "eslint": "^8.57.0",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
+    "eslint": "^8.57.0",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
