fix: update import paths to include file extensions and adjust package versions

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,6 +2,7 @@
 FROM node:20-alpine AS base
 WORKDIR /usr/src/app
 COPY package*.json ./
+RUN npm install
 RUN npm ci
 COPY . .
 # default command is for dev; in prod use `npm run build` + nginx image
