--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
     "format": "prettier --write \"src/**/*.ts\"",
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
-    "test:cov": "jest --coverage"
+    "test:cov": "jest --coverage",
+    "seed": "ts-node --esm src/seeds/seed.ts"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.1",
