feat(backend): implement data layer scaffolding (models, services, seed, tests)
- Add common DB helpers and CPF validator
    - applyBaseSchemaOptions for id virtual + clean JSON
    - normalizeCpf, isValidCpf with checksum
- Add Collaborators module
    - Schema (unique cpf, text index), service (create/find/search/setStatus), tests
- Add ICD Cache module
    - Schema (unique code), service (upsert/findByCode), tests
- Add Medical Certificates module
    - Schema (relations, validations, indexes), service (create/filter/cancel), tests
- Add Users module
    - Schema (unique email w/ collation, roles), service (create/find/setStatus/assignRoles), tests
- Add Audit Logs module
    - Schema (timestamp index, optional TTL), service (record/queryRange), tests
- Wire modules into AppModule and add DI wiring test
- Seed pipeline
    - seed.ts (idempotent), cli.ts, mock-data.ts with examples, npm run seed
    - Seed test with mocked Mongoose
- Index verification spec for all collections
- Build/test improvements
    - Jest ESM path mapper, tsconfig.build.json to exclude tests
    - Fix applyBaseSchemaOptions id virtual typing
- Docs
    - README: data layer overview (collections, relationships, indexes, commands, seed usage)
- Planning
    - Add TASK.md with step-by-step, testable plan

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "seed": "ts-node --esm src/seeds/seed.ts"
+    "seed": "ts-node --esm src/seeds/cli.ts"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.1",
