--- a/backend/package.json
+++ b/backend/package.json
@@ -45,6 +45,8 @@
     "prettier": "^3.2.5",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "supertest": "^6.3.3",
+    "@types/supertest": "^2.0.12"
   }
 }
