--- a/backend/package.json
+++ b/backend/package.json
@@ -12,13 +12,15 @@
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "seed": "ts-node --esm src/seeds/cli.ts"
+    "seed": "ts-node --esm src/seeds/cli.ts",
+    "openapi:yaml": "ts-node --esm src/openapi.ts"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/swagger": "^7.4.2",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
     "axios": "^1.7.2",
@@ -47,6 +49,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2",
     "supertest": "^6.3.3",
-    "@types/supertest": "^2.0.12"
+    "@types/supertest": "^2.0.12",
+    "yaml": "^2.4.5"
   }
 }
