--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "seed": "ts-node --esm src/seeds/cli.ts",
+    "seed": "npx tsx src/seeds/cli.ts",
     "openapi:yaml": "ts-node --esm src/openapi.ts"
   },
   "dependencies": {
