--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,11 +25,26 @@ jobs:
       - name: Install deps
         run: npm ci
 
+      - name: Lint (ESLint)
+        run: npm run lint
+
+      - name: Typecheck (tsc)
+        run: npm run typecheck
+
       - name: Run tests with coverage
         run: npm run test:cov
 
       - name: Build
         run: npm run build
+
+      - name: Generate OpenAPI YAML
+        run: npm run openapi:yaml
+
+      - name: Upload OpenAPI spec artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: openapi-spec
+          path: openapi.yaml
 
       - name: Upload coverage artifact
         if: always()
@@ -38,3 +53,34 @@ jobs:
           name: backend-coverage
           path: backend/coverage
 
+  frontend:
+    name: Frontend Lint + Typecheck + Tests + Build
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: frontend
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: frontend/package-lock.json
+
+      - name: Install deps
+        run: npm ci
+
+      - name: Lint (ESLint)
+        run: npm run lint
+
+      - name: Typecheck (vue-tsc)
+        run: npm run typecheck
+
+      - name: Run unit tests (Vitest)
+        run: npm run test
+
+      - name: Build (Vite)
+        run: npm run build
