feat: update WHO ICD API integration; add language support and refine base URL handling

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,7 @@ WHO_ICD_CLIENT_ID=your_client_id_here
 WHO_ICD_CLIENT_SECRET=your_client_secret_here
 WHO_ICD_BASE_URL=https://id.who.int
 WHO_ICD_RELEASE=2024-01
+WHO_ICD_LANGUAGE=en
 
 # ======== WEB (Vite) ========
 VITE_API_BASE_URL=http://localhost:3000
