feat: add HTTP client with retry logic and environment variable support

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,11 @@ WHO_ICD_LANGUAGE=en
 
 # ======== WEB (Vite) ========
 VITE_API_BASE_URL=http://localhost:3000
+VITE_USE_API=false                 # Feature flag: false = keep using local mocks; true = call real API
+VITE_AUTH_TOKEN_KEY=auth_token     # localStorage key for persisted auth token
+VITE_HTTP_TIMEOUT_MS=10000         # Axios request timeout (ms)
+VITE_HTTP_RETRY_ATTEMPTS=0         # Number of retry attempts for idempotent GETs (0 to disable)
+VITE_HTTP_RETRY_DELAY_MS=300       # Base delay (ms) for retry backoff (exponential)
 
 # ======== Audit / Logs ========
 # TTL em dias para expiração automática de logs de auditoria (opcional)
