--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,7 @@ jobs:
 
   frontend:
     name: Frontend Lint + Typecheck + Tests + Build
+    needs: backend
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -73,6 +74,15 @@ jobs:
       - name: Install deps
         run: npm ci
 
+      - name: Download OpenAPI spec artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: openapi-spec
+          path: .
+
+      - name: Generate API types from OpenAPI
+        run: npm run generate:api-types
+
       - name: Lint (ESLint)
         run: npm run lint
 
@@ -84,3 +94,16 @@ jobs:
 
       - name: Build (Vite)
         run: npm run build
+
+      - name: Upload coverage artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend-coverage
+          path: frontend/coverage
+
+      - name: Upload frontend dist artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend-dist
+          path: frontend/dist
