--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "typecheck": "vue-tsc --noEmit",
     "test": "vitest run --test-timeout=60000",
     "test:watch": "vitest --test-timeout=60000",
-    "test:cov": "vitest run --coverage --test-timeout=60000"
+    "test:cov": "vitest run --coverage --test-timeout=60000",
+    "generate:api-types": "openapi-typescript ../openapi.yaml -o src/types/api.ts"
   },
   "dependencies": {
     "@primeuix/themes": "^1.0.0",
@@ -35,6 +36,7 @@
     "typescript": "^5.4.2",
     "vite": "^5.2.0",
     "vitest": "^1.6.0",
-    "vue-tsc": "^2.0.12"
+    "vue-tsc": "^2.0.12",
+    "openapi-typescript": "^7.4.2"
   }
 }
