--- a/.env.example
+++ b/.env.example
@@ -20,8 +20,9 @@ WHO_ICD_RELEASE=2024-01
 WHO_ICD_LANGUAGE=en
 
 # ======== WEB (Vite) ========
-# For Docker Compose dev, set to http://api:3000; for local (no Docker), use http://localhost:3000
-VITE_API_BASE_URL=http://api:3000
+# The frontend calls the API via same-origin /api. In dev, Vite proxies /api to the backend.
+VITE_API_BASE_URL=/api
+VITE_DEV_PROXY_TARGET=http://localhost:3000
 VITE_USE_API=false                 # Feature flag: false = keep using local mocks; true = call real API
 VITE_AUTH_TOKEN_KEY=auth_token     # localStorage key for persisted auth token
 VITE_HTTP_TIMEOUT_MS=10000         # Axios request timeout (ms)
