--- a/backend/package.json
+++ b/backend/package.json
@@ -14,16 +14,16 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage --testTimeout=60000",
     "seed": "npx tsx src/seeds/cli.ts",
-    "openapi:yaml": "ts-node --esm src/openapi.ts"
+    "openapi:yaml": "npx tsx src/openapi.ts"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/swagger": "^7.4.2",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.4.2",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
@@ -31,7 +31,8 @@
     "ioredis": "^5.4.1",
     "mongoose": "^8.6.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "tsx": "^4.20.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.2",
@@ -41,16 +42,16 @@
     "@types/express": "^4.17.23",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.30",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2",
-    "supertest": "^6.3.3",
-    "@types/supertest": "^2.0.12",
     "yaml": "^2.4.5"
   }
 }
