feat: Enable OpenAPI generation and update schemas
- Un-commented and enabled OpenAPI YAML generation in CI workflow.
- Added artifact upload for OpenAPI spec in CI workflow.
- Added artifact download for OpenAPI spec in CI workflow.
- Updated AuditLog schema to explicitly define types for properties.
- Updated Auth controller to specify types for DTO properties.
- Updated Collaborator schema to explicitly define types for properties.
- Introduced UpdateCollaboratorDto for better type safety in updates.
- Updated CpfParamDto to explicitly define type for the CPF property.
- Added SearchIcdDto for searching ICD codes with validation.
- Updated Icd controller to use SearchIcdDto for search queries.
- Updated MedicalCertificate schema to explicitly define types for properties.
- Updated OpenAPI document generation to reflect new endpoints and schemas.
- Added frontend types for API based on OpenAPI spec.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,14 +37,14 @@ jobs:
       - name: Build
         run: npm run build
 
-#      - name: Generate OpenAPI YAML
-#        run: npm run openapi:yaml
-#
-#      - name: Upload OpenAPI spec artifact
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: openapi-spec
-#          path: openapi.yaml
+      - name: Generate OpenAPI YAML
+        run: npm run openapi:yaml
+
+      - name: Upload OpenAPI spec artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: openapi-spec
+          path: openapi.yaml
 
       - name: Upload coverage artifact
         if: always()
@@ -74,14 +74,14 @@ jobs:
       - name: Install deps
         run: npm ci
 
-#      - name: Download OpenAPI spec artifact
-#        uses: actions/download-artifact@v4
-#        with:
-#          name: openapi-spec
-#          path: .
+      - name: Download OpenAPI spec artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: openapi-spec
+          path: .
 
-#      - name: Generate API types from OpenAPI
-#        run: npm run generate:api-types
+      - name: Generate API types from OpenAPI
+        run: npm run generate:api-types
 
       - name: Lint (ESLint)
         run: npm run lint
