fix: add environment variable for OpenAPI YAML generation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,8 @@ jobs:
         run: npm run build
 
       - name: Generate OpenAPI YAML
+        env:
+          key: xxxxyyyzzz
         run: npm run openapi:yaml
 
       - name: Upload OpenAPI spec artifact
