--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage --testTimeout=60000",
     "seed": "npx tsx src/seeds/cli.ts",
-    "openapi:yaml": "npx tsx src/openapi.ts"
+    "openapi:yaml": "TS_NODE_PROJECT=tsconfig.openapi.json node --loader ts-node/esm src/openapi.ts"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.1",
