--- a/backend/tsconfig.build.json
+++ b/backend/tsconfig.build.json
@@ -11,8 +11,7 @@
   "exclude": [
     "src/**/*.spec.ts",
     "src/**/*.test.ts",
-    "src/**/__tests__/**",
-    "src/openapi.ts"
+    "src/**/__tests__/**"
   ],
   "include": [
     "src/**/*.ts"
