--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
+    "@types/node": "^24.3.0",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "@vitejs/plugin-vue": "^5.0.4",
@@ -32,11 +33,11 @@
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "jsdom": "^24.0.0",
+    "openapi-typescript": "^7.4.2",
     "prettier": "^3.2.5",
     "typescript": "^5.4.2",
     "vite": "^5.2.0",
     "vitest": "^1.6.0",
-    "vue-tsc": "^2.0.12",
-    "openapi-typescript": "^7.4.2"
+    "vue-tsc": "^2.0.12"
   }
 }
