--- a/backend/package.json
+++ b/backend/package.json
@@ -24,11 +24,13 @@
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.2",
+    "@types/jsdom": "^21.1.7",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "ioredis": "^5.4.1",
+    "jsdom": "^26.1.0",
     "mongoose": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
